k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-demo
  namespace: demo
spec:
  selector:
    app: node-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
